<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/dp15"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="@dimen/dp15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:textColor="@color/grey"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/msg_choose_working_hours"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/textAddWorkTime"
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textColor="@color/green"
            android:gravity="right"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/title_add"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listWorkTime"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <View
        android:layout_marginTop="@dimen/dp6"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/action_cancel"
            android:background="@color/white"
            android:layout_alignParentEnd="true"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_ok"
            android:text="@string/action_ok"
            android:background="@color/white"
            android:layout_toStartOf="@id/btn_cancel"
            android:layout_marginEnd="@dimen/dp10"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>